@@ -1,1 +1,1 @@
-.wp-block-cover{position:relative;display:flex;justify-content:center;align-items:center;min-height:350px;padding:1rem var(--wp--custom--gutter);background-size:cover;background-position:center center;overflow:hidden}.single-post .wp-block-cover__inner-container{max-width:var(--wp--style--global--content-size);margin-left:auto;margin-right:auto}.wp-block-cover:is(.alignleft,.alignright){margin-top:0;margin-left:0;margin-right:0;float:none}.wp-block-cover[class*="is-position-center"],.wp-block-cover[class*="-center"] .wp-block-cover__inner-container{align-items:center}.wp-block-cover[class*="is-position-top"],.wp-block-cover[class*="-left"] .wp-block-cover__inner-container{align-items:flex-start}.wp-block-cover[class*="is-position-bottom"],.wp-block-cover[class*="-right"] .wp-block-cover__inner-container{align-items:flex-end}.wp-block-cover__inner-container{width:100%;color:var(--wp--preset--color--white);z-index:2}.wp-block-cover.is-light .wp-block-cover__inner-container{color:var(--wp--preset--color--dark)}.has-custom-content-position .wp-block-cover__inner-container{display:flex;flex-direction:column}.wp-block-cover__background,.wp-block-cover__image-background,.wp-block-cover__video-background,.wp-block-cover__gradient-background{position:absolute;top:0;left:0;right:0;bottom:0;margin:0;padding:0;width:100%;height:100%;max-width:none;max-height:none;object-fit:cover;outline:none;border:none;box-shadow:none}.wp-block-cover__background,.wp-block-cover__gradient-background{opacity:var(--wp--bg--opacity)}.wp-block-cover .has-parallax{background-attachment:fixed;background-size:cover;background-repeat:no-repeat}.wp-block-cover .is-repeated{background-repeat:repeat;background-size:auto}.wp-block-cover .has-background-dim{z-index:1}.wp-block-cover :where(h1,h2,h3,h4,h5,h6,p,ul,ol,hr):not(.has-text-color,.dropdown-menu){color:inherit}@supports (-webkit-overflow-scrolling:touch){.wp-block-cover .has-parallax{background-attachment:scroll}}@media (prefers-reduced-motion:reduce){.wp-block-cover .has-parallax{background-attachment:scroll}}
+.wp-block-cover{position:relative;display:flex;justify-content:center;align-items:center;min-height:350px;padding:1rem var(--wp--custom--gutter);background-size:cover;background-position:center center;overflow:hidden;overflow:clip}.single-post .wp-block-cover__inner-container{max-width:var(--wp--style--global--content-size);margin-left:auto;margin-right:auto}.wp-block-cover:is(.alignleft,.alignright){margin-top:0;margin-left:0;margin-right:0;float:none}.wp-block-cover[class*="is-position-center"],.wp-block-cover[class*="-center"] .wp-block-cover__inner-container{align-items:center}.wp-block-cover[class*="is-position-top"],.wp-block-cover[class*="-left"] .wp-block-cover__inner-container{align-items:flex-start}.wp-block-cover[class*="is-position-bottom"],.wp-block-cover[class*="-right"] .wp-block-cover__inner-container{align-items:flex-end}.wp-block-cover__inner-container{width:100%;color:var(--wp--preset--color--white);z-index:2}.wp-block-cover.is-light .wp-block-cover__inner-container{color:var(--wp--preset--color--dark)}.has-custom-content-position .wp-block-cover__inner-container{display:flex;flex-direction:column}.wp-block-cover__background,.wp-block-cover__image-background,.wp-block-cover__video-background,.wp-block-cover__gradient-background{position:absolute;inset:0;margin:0;padding:0;width:100%;height:100%;max-width:none;max-height:none;object-fit:cover;outline:none;border:none;box-shadow:none}.wp-block-cover__background,.wp-block-cover__gradient-background{opacity:var(--wp--bg--opacity)}.wp-block-cover .has-parallax{background-attachment:fixed;background-size:cover;background-repeat:no-repeat}.wp-block-cover .is-repeated{background-repeat:repeat;background-size:auto}.wp-block-cover .has-background-dim{z-index:1}.wp-block-cover :where(h1,h2,h3,h4,h5,h6,p,ul,ol,hr):not(.has-text-color,.dropdown-menu){color:inherit}@supports (-webkit-overflow-scrolling:touch){.wp-block-cover .has-parallax{background-attachment:scroll}}@media (prefers-reduced-motion:reduce){.wp-block-cover .has-parallax{background-attachment:scroll}}
