@@ -1,1 +1,1 @@
-.wp-block-post-template.grid .wp-block-post + .wp-block-post{margin-top:0}.wp-block-post-template--latest .wp-block-post-title{margin-bottom:0}.wp-block-post-template--latest figure.alignleft,.wp-block-post-template--latest figure.alignright{min-width:100px}.wp-block-post-template--latest figure.alignleft{float:left;margin-right:1rem}.wp-block-post-template--latest figure.alignright{float:right;margin-left:1rem}
+.wp-block-post-template.grid .wp-block-post + .wp-block-post{margin-top:0}.wp-block-post-template--latest figure.alignleft,.wp-block-post-template--latest figure.alignright{min-width:100px}.wp-block-post-template--latest figure.alignleft{float:left;margin-right:1rem}.wp-block-post-template--latest figure.alignright{float:right;margin-left:1rem}
